[package]
name = "gravity_simulations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5" }

# Physics simulation
rapier3d = { version = "0.17.0", features = [ "simd-stable", "parallel", "serde-serialize" ] }

rayon = "1.6.1"

# Serialization
serde = "1.0.152"
serde_derive = "1.0.152"
rmp = "0.8.11"
rmp-serde  = "1.1.1"

# Cool console display
indicatif = "0.17.3"


[profile.dev.package.rapier3d]
opt-level = 3
